[package]
name = "selector_grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
reqwest = "0.11.14"
scraper = "0.14.0"
clap = { version = "4.1.6", features = ["derive"] }
url = "2.3.1"
bytes = "1.4.0"
